# ipw

./: .gitignore  LICENSE  README.md  log.txt  pyproject.toml  requirements.txt
ipw_classifier/notebook/: IPW_Clustering.ipynb  eda.ipynb
ipw_classifier/src/: classifier.py  clusterer.py  main.py  parse_input.py  read_parquet.py
ipw_classifier/src/models/: case.py
ipw_classifier/src/settings/: constants.py
ipw_clusterer/ipw/: __init__.py
ipw_clusterer/ipw/enums/: __init__.py  model.py  question.py
ipw_clusterer/ipw/models/: __init__.py  affinity_propagation.py  agglomerative_clustering.py  dbscan.py  distance_matrix.py  distance_to_affinity_matrix.py  output.py  spectral_clustering.py
ipw_clusterer/ipw/parse/: clean.py  readparquet.py
ipw_clusterer/ipw/plots/: __init__.py  bar_labels.py  histogram_labels.py  model_wordclouds.py  silhouette.py  wordcloud.py
ipw_clusterer/ipw/text/: __init__.py  add_word_count_to_dict.py  description_per_label.py  summary.py  words_per_label.py
ipw_clusterer/notebook/: IPW_Clustering.ipynb
ipw_clusterer/src/: ipw.py
ipw_clusterer/src/models/: __init__.py  affinity_propagation.py  agglomerative_clustering.py  dbscan.py  distance_matrix.py  output.py  spectral_clustering.py
ipw_clusterer/src/parse/: __init__.py  readparquet.py
ipw_clusterer/src/plots/: histogram_labels.py  histogram_wordfreq.py  silhouette.py
ipw_clusterer/src/text/: add_word_count_to_dict.py  filter.py  words_per_label.py
