[project]
name = "IPW classifier"
version = "0.0.1"
description = "This package analyzes text in the 'Doorbraak' methode database and classifies cases based on the text."
authors = ["Gerard van Konijnenburg <info@moup.nl>"]
readme="README.md"
maintainers = [{"Gerard van Konijnenburg <info@moup.nl>"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]
[project.urls]
"Bug Tracker" = "https://gitlab.organisatie.ofzo"
[project.scripts]
projectname = "ipw_classifier:_main_"
[build-system]
requires = [ "setuptools>=41", "wheel", "setuptools-git-versioning<2", ]
build-backend = "setuptools.build_meta"
[tool.black]
line-length = 99
[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true
[tool.coverage.run]
branch = true
[tool.flake8]
max-line-length = 99
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
[tool.setuptools-git-versioning]
enabled = true